--- a/templates/home.html
+++ b/templates/home.html
@@ -7,9 +7,9 @@
 <body>
     <h1>Historical Weather Data API</h1>
     <h3>URL Format: http://127.0.0.1/api/station/date</h3>
-    <h3>URL Example: http://127.0.0.1/api/5/19961025</h3>
+    <h3>URL Example: http://127.0.0.1/api/5/1996-10-25</h3>
     <p>
-        I'm Pickle Rick!
+        {{data|safe}}
     </p>
 </body>
 </html>
