--- a/templates/home.html
+++ b/templates/home.html
@@ -6,8 +6,17 @@
 </head>
 <body>
     <h1>Historical Weather Data API</h1>
+    <h3>Weather data for specific station and date</h3>
     <h3>URL Format: http://127.0.0.1/api/station/date</h3>
     <h3>URL Example: http://127.0.0.1/api/5/1996-10-25</h3>
+    <br>
+    <h3>Weather data for specific station across time</h3>
+    <h3>URL Format: http://127.0.0.1/api/station</h3>
+    <h3>URL Example: http://127.0.0.1/api/5</h3>
+    <br>
+    <h3>Weather data for specific and year </h3>
+    <h3>URL Format: http://127.0.0.1/api/station/date/year</h3>
+    <h3>URL Example: http://127.0.0.1/api/5/1996</h3>
     <p>
         {{data|safe}}
     </p>
